# magnetise

./: Cargo.toml  README.md  cargo.toml
examples/: simple.rs
src/: lib.rs
tests/: test_simple.rs
