[package]
name = "magnetise"
version = "0.1.1"
edition = "2021"
description = "A Rust library to asses the similarity between SQL queries."
authors = ["IteraLabs.ai <contact@iteralabs.ai>"]
license = "Apache-2.0"
repository = "https://github.com/iteralabs/magnetise"
keywords = ["sql", "postgresql", "data-engineering", "similarity"]
categories = ["data-structures", "development-tools"]

[dependencies]
regex = "1.10.6"
